# wasmgrid

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  bindgen.rs  bindings.rs  clippy.toml  docker-compose.yaml  expanded.rs  nex-utm.md  otel-collector-config.yaml  prometheus.yml  rm.txt  rm2.txt  rust-toolchain.toml  rustc-ice-2025-08-12T00_30_31-87563.txt  rustc-ice-2025-08-17T19_45_27-85624.txt  rustfmt.toml  span_data.txt  taplo.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  deploy.yaml  patch.yaml  publish.yaml  release.yaml  verify.yaml
crates/azkeyvault/: Cargo.toml
crates/azkeyvault/src/: lib.rs
crates/http-client/: Cargo.toml
crates/http-client/src/: client.rs  lib.rs  server.rs
crates/http-server/: Cargo.toml
crates/http-server/src/: error.rs  server.rs
crates/http-shared/: Cargo.toml
crates/http-shared/src/: lib.rs  request.rs
crates/messaging/: Cargo.toml
crates/messaging/src/: consumer.rs  lib.rs  producer.rs
crates/mongodb/: Cargo.toml
crates/nats/: Cargo.toml
crates/otel-azure/: Cargo.toml
crates/otel-azure/src/: lib.rs
crates/otel-client/: Cargo.toml
crates/otel-client/src/: convert.rs  lib.rs  process.rs  propagate.rs
crates/resources/: Cargo.toml
crates/resources/src/: azkeyvault.rs  lib.rs  mongo.rs  nats.rs
crates/runtime/: Cargo.toml
crates/runtime-macros/: Cargo.toml
crates/runtime-macros/src/: lib.rs  runtime.rs
crates/runtime/src/: cli.rs  compiler.rs  lib.rs  runtime.rs  service.rs  state.rs  trace.rs  traits.rs
crates/sdk-http/: Cargo.toml
crates/sdk-http-client/: Cargo.toml
crates/sdk-http-router/: Cargo.toml
crates/sdk-http/src/: client.rs  lib.rs  router.rs  uri.rs
crates/sdk-otel/: Cargo.toml
crates/sdk-otel-attr/: Cargo.toml
crates/sdk-otel-attr/src/: lib.rs
crates/sdk-otel-client/: Cargo.toml
crates/sdk-otel/src/: convert.rs  export.rs  init.rs  lib.rs  metrics.rs  propagate.rs  tracing.rs
crates/sdk-otel/src/convert/: metrics.rs  tracing.rs
crates/sdk-otel/src/export/: metrics.rs  tracing.rs
crates/sdk-otel/src/init/: metrics.rs  tracing.rs
crates/sdk-otel/src/tracing/: processor.rs
crates/services/: Cargo.toml  clippy.toml
crates/services/src/: az_vault.rs  blobstore.rs  blobstore_mdb.rs  blobstore_mongo.rs  blobstore_nats.rs  block_azkeyvault.rs  http.rs  jsondb.rs  jsondb_mongodb.rs  keyvalue.rs  keyvalue_nats.rs  keyvault_azure.rs  kv_nats.rs  lib.rs  messaging.rs  nats_messaging.rs  p2p.rs  resources.rs  rpc.rs  rpc_nats.rs  sql_az.rs  sql_mdb.rs  vault.rs  vault_az.rs
crates/services/src/messaging/: host.rs  server.rs
crates/services/src/messaging-nats/: server.rs
crates/services/src/messaging_nats/: host.rs
crates/services/src/msg_nats/: host.rs  server.rs
crates/services/src/nats_messaging/: host.rs  server.rs
crates/services/src/resources/: azkeyvault.rs  mongo.rs  nats.rs
crates/services/src/rpc/: host.rs  server.rs
crates/services/src/rpc_nats/: host.rs  server.rs
crates/services/wit/: deps.toml
crates/wasi-bindings/: Cargo.toml
crates/wasi-bindings/src/: lib.rs
crates/wasi-bindings/wit/: deps.toml  world.wit
crates/wasi-blobstore/: Cargo.toml
crates/wasi-blobstore-mdb/: Cargo.toml
crates/wasi-blobstore-mdb/src/: lib.rs
crates/wasi-blobstore-nats/: Cargo.toml
crates/wasi-blobstore-nats/src/: lib.rs
crates/wasi-blobstore/src/: lib.rs  mongodb.rs  nats.rs
crates/wasi-core/: Cargo.toml
crates/wasi-core/src/: lib.rs
crates/wasi-http/: Cargo.toml  README.md
crates/wasi-http-ext/: Cargo.toml
crates/wasi-http-ext/src/: client.rs  handler.rs  lib.rs  request.rs  response.rs  routing.rs  server.rs
crates/wasi-http/src/: client.rs  client_v1.rs  http.rs  lib.rs  request.rs  server.rs
crates/wasi-keyvalue/: Cargo.toml  keyvalue.rs
crates/wasi-keyvalue-nats/: Cargo.toml
crates/wasi-keyvalue-nats/src/: lib.rs
crates/wasi-keyvalue/src/: atomics.rs  batch.rs  lib.rs  nats.rs  store.rs
crates/wasi-keyvalue/wit/: deps.toml  world.wit
crates/wasi-messaging/: Cargo.toml
crates/wasi-messaging-nats/: Cargo.toml
crates/wasi-messaging-nats/src/: host.rs  lib.rs  server.rs
crates/wasi-messaging/src/: bindings.rs  consumer.rs  lib.rs  nats.rs  producer.rs
crates/wasi-messaging/src/nats/: host.rs  server.rs
crates/wasi-messaging/wit/: deps.toml  world.wit
crates/wasi-otel/: Cargo.toml
crates/wasi-otel/src/: convert.rs  lib.rs  metrics.rs  process.rs  propagate.rs  tracing.rs
crates/wasi-otel/src/otel/: conversion.rs  processor.rs
crates/wasi-signature/: Cargo.toml
crates/wasi-sql/: Cargo.toml  expanded.rs
crates/wasi-vault/: Cargo.toml
crates/wasi-vault-az/: Cargo.toml
crates/wasi-vault-az/src/: lib.rs
crates/wasi-vault/src/: az_keyvault.rs  blobstore_mdb.rs  blobstore_nats.rs  http.rs  lib.rs  messaging_nats.rs
crates/wasi-vault/src/messaging_nats/: host.rs  server.rs
crates/wasi-vault/tests/: messaging.rs
crates/wit-bindings/: Cargo.toml
examples/blobstore/: Cargo.toml  README.md
examples/docdb/: Cargo.toml  README.md
examples/guest/: Cargo.toml
examples/http/: Cargo.toml  README.md
examples/http-http/: Cargo.toml  README.md
examples/http-kv/: Cargo.toml  README.md
examples/http-msg/: Cargo.toml  README.md
examples/http-p2p/: Cargo.toml  README.md
examples/http-sql/: Cargo.toml
examples/jsondb/: Cargo.toml  README.md
examples/keyvalue/: Cargo.toml  README.md
examples/keyvault/: Cargo.toml  README.md
examples/messaging/: Cargo.toml  README.md
examples/msg/: Cargo.toml  README.md
examples/otel/: Cargo.toml  README.md
examples/p2p/: Cargo.toml  README.md
examples/pub-sub/: Cargo.toml  README.md
examples/request-reply/: Cargo.toml  README.md
examples/rpc/: README.md
guest/: Cargo.toml
host/: Cargo.toml
src/: bindings.rs  capabilities.rs  handler.rs  http.rs  keyvalue.rs  lib.rs  main.rs  messaging.rs  msg.rs  nats.rs  rpc.rs  runtime.rs  service.rs  signature.rs  system.rs  trace.rs  wasmgrid.rs  wg_all.rs  wg_http.rs
tests/: publish.rs
wit/: deps.toml  guest.wit  producer.wit  world.wit
(+125 files in other folders)
