
[package]
name = "wasmgrid"
description = "WASI Component runtime"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"

default-run = "wg-all"

[[bin]]
name = "wg-all"
path = "src/wg_all.rs"
doc = false

[[bin]]
name = "wg-http"
path = "src/wg_http.rs"
doc = false

[lints]
workspace = true

[features]
default = ["compile"]
compile = ["runtime/compile"] # adds cranelift (+ ~4Mb)

[dependencies]
anyhow.workspace = true
azkeyvault = { path = "crates/azkeyvault" }
dotenv = "0.15.0"
mongodb = { path = "crates/mongodb" }
nats = { path = "crates/nats" }
runtime.workspace = true
tokio.workspace = true
wasi-blobstore-mdb = { path = "crates/wasi-blobstore-mdb" }
wasi-http = { path = "crates/wasi-http" }
wasi-keyvalue-nats = { path = "crates/wasi-keyvalue-nats" }
wasi-messaging-nats = { path = "crates/wasi-messaging-nats" }
wasi-otel = { path = "crates/wasi-otel" }
wasi-vault-az = { path = "crates/wasi-vault-az" }

[profile.release]
lto = true
opt-level = "s"
strip = true

[workspace]
members = ["crates/*", "examples/*"]
resolver = "3"

[workspace.package]
authors = ["Credibil"]
edition = "2024"
rust-version = "1.89"

[workspace.lints.rust]
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
# unstable_features = "warn"
unused_import_braces = "warn"

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"

[workspace.dependencies]
anyhow = "1.0.99"
async-nats = { version = "0.42.0" }
axum = { version = "0.8.4", default-features = false }                                               # features = ["form", "json", "query", "tracing"]
azure_core = { version = "0.27.0", default-features = false, features = ["reqwest_rustls"] }
azure_identity = { version = "0.27.0", default-features = false }
azure_security_keyvault_secrets = { version = "0.6.0", default-features = false }
base64ct = { version = "1.8.0", features = ["std"] }
bytes = "1.10.1"
cfg-if = "1.0.3"
chrono = "0.4.41"
credibil-encoding = { git = "https://github.com/credibil/core.git", tag = "v0.1.0" }
credibil-otel = { git = "https://github.com/credibil/core.git", tag = "v0.1.0" }
futures = "0.3.31"
http = "1.3.1"
mongodb = { version = "3.2.5" }
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["experimental_metrics_custom_reader"] }
runtime = { path = "crates/runtime" }
sdk-http = { path = "crates/sdk-http" }
sdk-otel = { path = "crates/sdk-otel", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
time = "0.3.43"
tokio = { version = "1.47.1", default-features = false }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
wasi = "0.14.3"
wasmtime = { version = "36.0.2", default-features = false, features = ["async", "component-model"] }
wasmtime-wasi = "36.0.2"
wasmtime-wasi-http = "36.0.2"
wasmtime-wasi-io = "36.0.2"
wit-bindgen = "0.45.0"
wit-bindings = { path = "crates/wit-bindings" }

# [patch."https://github.com/credibil/core.git"]
# credibil-otel = { path = "../../credibil/core/crates/otel" }
