[package]
name = "azkeyvault"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
azure_core.workspace = true
azure_identity.workspace = true
azure_security_keyvault_secrets.workspace = true
runtime.workspace = true
tracing.workspace = true
