[package]
name = "http-shared"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
http = "1.1.0"
serde = "1.0.202"
serde_json = "1.0.117"
serde_urlencoded = "0.7.1"
tracing.workspace = true
vercre-vci = { git = "https://github.com/vercre/vercre" }
wasi.workspace = true
wasi-bindings.workspace = true
