[package]
name = "messaging"
description = "Implementation of wasi:messaging wit"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
anyhow = "1.0.82"
async-nats = "0.34.0"
async-trait = "0.1.80"
bytes = "1.6.0"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
wasmtime = { version = "19.0.2", features = ["component-model"] }
wasmtime-wasi = "19.0.2"
wit-bindgen-rt = "0.24.0"

[package.metadata.component.target]
path = "wit"
world = "messaging"
