[package]
name = "otel-azure"
version = "0.1.0"
authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
edition = "2018"

[dependencies]
anyhow.workspace = true
opentelemetry = "0.23.0"
opentelemetry-application-insights = { version = "0.33.0" }
opentelemetry-http = { version = "0.12.0", features = ["reqwest"] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
reqwest = "0.11"
tokio = { version = "1", features = ["macros", "process", "rt", "rt-multi-thread", "time"] }
tracing = "0.1.40"
tracing-attributes = "0.1.27"
tracing-futures = "0.2.5"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = "0.3.18"
