[package]
name = "otel-client"
description = "Wasm opentelemetry service"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

[lints]
workspace = true

[features]

[dependencies]
anyhow.workspace = true
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0" }
wit-bindgen = "0.43.0"
