[package]
name = "resources"
description = "Shared traits and types for WASM runtime environment resources"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

[lints]
workspace = true

[features]
azkeyvault = ["dep:azure_identity", "dep:azure_security_keyvault_secrets"]
mongodb = ["dep:mongodb"]
nats = ["dep:async-nats", "dep:nkeys"]

[dependencies]
anyhow.workspace = true
async-nats = { version = "0.42.0", optional = true }
azure_core = { workspace = true }
azure_identity = { workspace = true, optional = true }
azure_security_keyvault_secrets = { workspace = true, optional = true }
mongodb = { version = "3.2.4", optional = true }
nkeys = { version = "0.4.5", optional = true }
tokio.workspace = true
tracing.workspace = true
