[package]
name = "runtime-macros"
description = "Wasm opentelemetry service"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = { version = "1.0.86", features = ["proc-macro"] }
quote = "1.0.40"
syn = { version = "2.0.106", features = ["parsing"] }
tracing.workspace = true
