[package]
name = "runtime"
description = "Wasm runtime"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

# [lib]
# crate-type = ["cdylib"]

[lints]
workspace = true

[features]
compile = ["wasmtime/cranelift"]

[dependencies]
anyhow.workspace = true
async-trait = "0.1.89"
bytes = "1.10.1"
cfg-if.workspace = true
clap = { version = "4.5.45", features = ["derive"] }
tokio = { workspace = true, features = ["signal"] }
tracing.workspace = true
wasmtime = { workspace = true, features = ["runtime"] }
wasmtime-wasi.workspace = true

# opentelemetry = "0.30.0"
# tracing-opentelemetry = "0.31.0"
