[package]
name = "runtime"
description = "Wasm runtime"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

[lints]
workspace = true

[features]
compile = ["wasmtime/cranelift"]

[dependencies]
anyhow.workspace = true
cfg-if.workspace = true
clap = { version = "4.5.45", features = ["derive"] }
tokio = { workspace = true, features = ["signal"] }
tracing.workspace = true
wasmtime = { workspace = true, features = ["runtime"] }
wasmtime-wasi.workspace = true
