[package]
name = "runtime"
description = "Wasm runtime"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

[lints]
workspace = true

[features]
compile = ["wasmtime/cranelift"]

[dependencies]
anyhow.workspace = true
cfg-if.workspace = true
clap = { version = "4.5.47", features = ["derive"] }
credibil-otel.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["signal"] }
tracing.workspace = true
wasmtime = { workspace = true, features = ["runtime"] }
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true
