[package]
name = "sdk-http-router"
description = "Wrapper for wasi-http incoming request bindings"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

# [lib]
# crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures.workspace = true
http.workspace = true
percent-encoding = "2.3.1"
serde_json.workspace = true
tower.workspace = true
wasi.workspace = true
