[package]
name = "sdk-http"
description = "Wrapper for wasi-http incoming request bindings"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

# [lib]
# crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
credibil-encoding.workspace = true
futures.workspace = true
http.workspace = true
percent-encoding = "2.3.2"
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
tracing.workspace = true
wasi.workspace = true
