[package]
authors.workspace = true
description = "Wasm services"
edition.workspace = true
name = "services"
version = "0.1.0"

[lints]
workspace = true

[features]
default = ["blobstore", "http", "keyvalue", "messaging", "vault"]
http = ["dep:wasmtime-wasi-http"]
blobstore = ["dep:async-nats", "dep:mongodb", "resources/nats", "resources/mongodb"]
keyvalue = ["dep:async-nats", "resources/nats"]
messaging = ["dep:async-nats", "resources/nats"]
# sql = ["dep:mongodb", "resources/mongodb"]
vault = ["dep:azure_security_keyvault_secrets", "dep:openssl", "resources/azkeyvault"]

[dependencies]
anyhow.workspace = true
async-nats = { version = "0.42.0", optional = true }
async-trait = "0.1.88"
azure_security_keyvault_secrets = { workspace = true, optional = true }
base64ct = { version = "1.8.0", features = ["std"] }
bytes = "1.10.1"
chrono = "0.4.41"
futures = "0.3.31"
http.workspace = true
hyper = "1.6.0"
mongodb = { version = "3.2.4", optional = true }
resources = { path = "../resources", default-features = false }
runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
time = "0.3.41"
tokio = { workspace = true, features = ["macros", "signal"] }
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-http = { workspace = true, optional = true }
# wasmtime-wasi-io = { workspace = true, optional = true }

# required for azure_identity, etc.
openssl = { version = "0.10", optional = true, features = ["vendored"] }

[dev-dependencies]
async-nats = "0.42.0"
ecdsa = "0.16.9"
k256 = "0.13.4"
