[package]
authors.workspace = true
description = "Wasm services"
edition.workspace = true
name = "services"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
resources.workspace = true
runtime.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true
