[package]
authors.workspace = true
description = "WASM guest for secure, isolated and distributed storage of wallet keys and credentials"
edition.workspace = true
name = "wasi-bindings"
version = "0.1.0"

# [lib]
# crate-type = ["lib"]

[lints]
workspace = true

[dependencies]
wit-bindgen = "0.28.0"
