[package]
name = "wasi-blobstore-mdb"
description = "WASI blobstore service using MongoDB"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

[lints]
workspace = true

[features]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
mongodb.workspace = true
runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
