[package]
name = "wasi-blobstore"
description = "Wasm blobstore service"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

[lints]
workspace = true

[features]

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
mongodb = { version = "3.2.5" }
resources = { workspace = true, features = ["mongodb", "nats"] }
runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
time = "0.3.41"
tokio.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
