[package]
name = "wasi-core"
description = "Types shared between WASI host implementations"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

[lints]
workspace = true

[dependencies]
resources.workspace = true
runtime.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true
