[package]
name = "wasi-http-ext"
description = "Wrapper for wasi-http bindings"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

# [lib]
# crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
http.workspace = true
regex = "1.11.1"
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7.1"
tracing.workspace = true
wasi.workspace = true
