[package]
name = "wasi-http"
description = "Wasm http service"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

[lints]
workspace = true

[features]

[dependencies]
anyhow.workspace = true
futures.workspace = true
http.workspace = true
hyper = "1.7.0"
runtime.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi-http.workspace = true
