[package]
name = "wasi-keyvalue-nats"
description = "WASI Keyvalue service using NATS"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

[lints]
workspace = true

[features]

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
base64ct.workspace = true
futures.workspace = true
runtime.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
