[package]
name = "wasi-keyvalue"
description = "Implementation of wasi:keyvalue wit"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
