[package]
name = "wasi-messaging-nats"
description = "Wasm messaging service using NATS"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

[lints]
workspace = true

[features]

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
futures.workspace = true
runtime.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true

[dev-dependencies]
ecdsa = "0.16.9"
k256 = "0.13.4"
