[package]
name = "wasi-messaging"
description = "Wasm messaging service"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

[lints]
workspace = true

[features]

[dependencies]
anyhow.workspace = true
async-nats = { version = "0.42.0" }
futures.workspace = true
resources = { workspace = true, features = ["nats"] }
runtime.workspace = true
time = "0.3.41"
tokio.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true

services = { path = "../services" }

[dev-dependencies]
async-nats = "0.42.0"
ecdsa = "0.16.9"
k256 = "0.13.4"
