[package]
name = "wasi-otel"
description = "Wasm opentelemetry service"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

[lints]
workspace = true

[features]

[dependencies]
anyhow.workspace = true
opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"
runtime.workspace = true
tracing.workspace = true
tracing-opentelemetry = "0.31.0"
wasi-core.workspace = true
wasmtime.workspace = true
