[package]
name = "wasi-otel"
description = "Wasm opentelemetry service"
authors.workspace = true
edition.workspace = true
version = "0.1.0"

[lints]
workspace = true

[features]

[dependencies]
anyhow.workspace = true
credibil-otel.workspace = true
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.30.0", features = ["experimental_metrics_custom_reader"] }
runtime.workspace = true
tracing.workspace = true
tracing-opentelemetry = "0.31.0"
wasi-core.workspace = true
wasmtime.workspace = true
